# 3D_model_animation_Demo

./: CMakeLists.txt
disassemblade_code/: disassemblade_code.txt
res/: test_shader_2.fs  test_shader_2.vs
res/ford_gt40/: ford gt40.mtl
res/game_ready_arcade_machine/source/: untitled.mtl
res/jet_model/: jet_model.mtl
res/test_cube/: test_cube.mtl
res/test_cube_2/: test_cube2.mtl
src/: main.cpp
src/graphics/: ShaderCl.h  basic_file_mesh.cpp  basic_file_mesh.h  main_model.cpp  main_model.h  model.h  new_mesh_type.h
src/window/: events.h
